--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,24 @@
   color: rgb(112, 76, 182);
 }
 
+.alert-icon {
+  color: #ffffff;
+  height: 56px;
+  padding: 16px;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.5;
+  border-radius: 0;
+  justify-content: space-between;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.alert-icon:hover {
+  background-color: rgba(255, 255, 255, 0.24);
+}
+
 @keyframes App-logo-float {
   0% {
     transform: translateY(0);
