--- a/src/App.scss
+++ b/src/App.scss
@@ -48,7 +48,8 @@
   cursor: pointer;
 }
 
-.alert-icon:hover {
+.alert-icon:hover,
+.alert-icon-active {
   background-color: rgba(255, 255, 255, 0.24);
 }
 
