--- a/src/features/Components/Dashboard/ProtocolTable.scss
+++ b/src/features/Components/Dashboard/ProtocolTable.scss
@@ -19,11 +19,11 @@
     padding: 0;
   }
 
-  table thead tr th:first-child + th,
-  table tbody tr td:first-child + td {
-    display: none;
-  }
-
+  // table thead tr th:first-child + th,
+  // table tbody tr td:first-child + td {
+  //   display: none;
+  // }
+  // table tbody tr:last-child { max-height: 48px; }
   .ex-text {
     max-width: 95%;
     overflow: hidden;
@@ -68,33 +68,28 @@
     text-transform: capitalize;
   }
   // Empty Spaces when rows are less in table-- starts
-  [class^="MuiTableBody-root-"] {
-    [class^="MuiTableRow-root-"] {
+  [class^="MuiTableBody-root"] {
+    [class^="MuiTableRow-root"] {
       // height: 14px !important;
       height: 0px !important;
 
-      [class^="MuiTableCell-root-"]:nth-child(-n + 2) {
+      [class^="MuiTableCell-root"]:nth-child(-n + 2) {
         // padding-top: 2px;
         // try belwo and comment about padding top
         padding-bottom: 2px;
       }
-      [class^="MuiTableCell-root-"]:nth-child(n + 2) {
+      [class^="MuiTableCell-root"]:nth-child(n + 2) {
         padding-top: 8px;
         padding-bottom: 6px;
       }
     }
   }
-  .empty-protocol-table {
-    [class^="MuiTable-root-"] {
-      tbody {
-        tr {
-          td {
-            height: 200px !important;
-          }
-        }
+
+    [class^="EmptyRow-root-"] {
+      td {
+        height: 200px !important;
       }
     }
-  }
   // [class^="EmptyRow-root-"]{
   //   td{
   //     height: 200px !important;
