--- a/src/features/Container/Navbar/Alerts.scss
+++ b/src/features/Container/Navbar/Alerts.scss
@@ -1,76 +1,165 @@
+.ButtonBase-root {
+  color: inherit;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  display: inline-flex;
+  outline: 0;
+  padding: 0;
+  position: relative;
+  align-items: center;
+  user-select: none;
+  border-radius: 0;
+  vertical-align: middle;
+  -moz-appearance: none;
+  justify-content: center;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.ListItem-root {
+  width: 100%;
+  display: flex;
+  position: relative;
+  box-sizing: border-box;
+  text-align: left;
+  align-items: center;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  justify-content: flex-start;
+  text-decoration: none;
+}
+
+.ListItem-button {
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.ListItemText-root {
+  flex: 1 1 auto;
+  min-width: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.Typography-root {
+  margin: 0;
+}
+
+.Typography-body2 {
+  color: #000000;
+  font-size: 14px;
+  font-family: Proxima Nova, Nunito Sans, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.Typography-body1 {
+  color: #000000;
+  font-size: 16px;
+  font-family: Proxima Nova, Nunito Sans, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.Typography-displayBlock {
+  display: block;
+}
+.Typography-gutterBottom {
+  margin-bottom: 0.35em;
+}
+.TouchRipple-root {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  overflow: hidden;
+  position: absolute;
+  border-radius: inherit;
+  pointer-events: none;
+}
 .root {
-    width: "100%";
-    max-width: 360;
-    background-color: #ffffff;
-    position: "relative";
-    overflow: "auto";
-    max-height: 300;
-    padding-bottom: 0;
+  width: "100%";
+  max-width: 360px;
+  background-color: #ffffff;
+  position: relative;
+  overflow: auto;
+  max-height: 300px;
+  padding-bottom: 0;
+}
+.listItem {
+  color: #444444;
+  height: 72px;
+  outline: none;
+  padding-left: 14px;
+  border-bottom: 0.5px solid rgb(128 128 128 / 15%);
+  padding-right: 24px;
+}
+.listItem:hover {
+  background-color: rgb(128 128 128 / 15%);
+}
+.listItemTextRoot {
+  padding-left: 0;
+  white-space: nowrap;
+}
+.listItemTextPrimary {
+  font-size: 16px;
+  font-weight: 600;
+  color: inherit;
+}
+.listItemTextSecondary {
+  width: 310px;
+  font-size: 14px;
+  color: inherit;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.71;
+}
+.listItemNotRead {
+  height: 72px;
+  outline: none;
+  padding-left: 14px;
+  padding-right: 24px;
+  background-color: #eaeaea;
+  color: #0076ae;
+  & p {
+    color: #0076ae;
   }
-  .listItem {
-    height: 72;
-    outline: "none";
-    padding-left: 14;
-    padding-right: 24;
-    color: "#444444";
+  & svg {
+    color: #0076ae;
   }
-  .listItemTextRoot {
-    padding-left: 0;
-    white-space: "nowrap";
-  }
-  .listItemTextPrimary {
-    font-size: 16;
-    font-weight: 600;
-    color: "inherit";
-  }
-  .listItemTextSecondary {
-    width: 310;
-    font-size: 14;
-    color: "inherit";
-    overflow: "hidden";
-    text-overflow: "ellipsis";
-    line-height: 1.71;
-  }
-  .listItemNotRead {
-    height: 72;
-    outline: "none";
-    padding-left: 14;
-    padding-right: 24;
-    background-color: "#eaeaea";
-    color: "#0076ae";
-    & p {
-      color: "#0076ae";
-    }
-    & svg {
-      color: "#0076ae";
-    }
-  }
-  .timestamp {
-    color: "#595959";
-    bottom: 8;
-    position: "relative";
-    white-space: "nowrap";
-    line-height: 1.71;
-    // IE11-specific selector
-    // @media all and (-ms-high-contrast: none) (-ms-high-contrast: active) {
-    //   right: 48;
-    // }
-  }
-  .icon {
-    color: "#0557d5";
-    min-width: 0;
-    margin-right: 16;
-  }
-  .iconSize {
-    font-size: 19.22;
-    padding: 0.4;
-    box-sizing: "content-box";
-  }
-  .dayLabel {
-    background-color: "#f8f9fb";
-    height: 32;
-    outline: "none";
-  }
-  .dayLabelText {
-    font-weight: 600;
-  }
+}
+.timestamp {
+  color: #595959;
+  bottom: 8px;
+  position: relative;
+  white-space: nowrap;
+  line-height: 1.71;
+  // IE11-specific selector
+  // @media all and (-ms-high-contrast: none) (-ms-high-contrast: active) {
+  //   right: 48;
+  // }
+}
+.icon {
+  color: #0557d5;
+  min-width: 0;
+  margin-right: 16;
+}
+.iconSize {
+  font-size: 19.22;
+  padding: 0.4;
+  box-sizing: content-box;
+}
+.dayLabel {
+  background-color: #f8f9fb;
+  height: 32px;
+  outline: none;
+}
+.dayLabelText {
+  font-weight: 600;
+}
+.ListItemText-multiline {
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
