--- a/src/features/Container/Protocols/Documents.scss
+++ b/src/features/Container/Protocols/Documents.scss
@@ -3,15 +3,18 @@
 
   .source-document-tab {
     width: 100%;
-    [class^="Table-root-"] {
-      height: 160px;
+    // [class^="Table-root-"] {
+    //   height: 160px;
+    // }
+    // [class^="InternalTablePagination-toolbar-"],
+    // [class^=".MuiTableFooter-root-"] {
+    //   display: none;
+    // }
+    [class^="Table-tableWrapper-"] {
+      overflow: hidden;
     }
-    [class^="InternalTablePagination-toolbar-"],
-    [class^=".MuiTableFooter-root-"] {
+    tbody tr:last-child {
       display: none;
-    }
-    .MuiPaper-root:first-child {
-      height: 170px;
     }
     .hyperlink {
       &:active {
