--- a/src/features/Container/QC/QC.scss
+++ b/src/features/Container/QC/QC.scss
@@ -1,7 +1,7 @@
 .qc-parent {
   padding-left: 20px;
   max-width: 1140px;
-  margin: 30px 70px auto 10px;
+  // margin: 30px 70px auto 10px;
   .qc-tabs-parent {
     margin-top: 20px;
     .MuiTab-root {
