--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -615,7 +615,7 @@
   }
 }
 .new-checkbox-style {
-  padding: 0 16px;
+  padding: 0 5px;
   margin-right: 0;
   margin-left: 0;
   border-left: 5px solid transparent;
@@ -623,6 +623,7 @@
   min-height: 30px;
   display: flex;
   flex-direction: row;
+  width: 98% !important;
 
   label {
     font-size: 13px;
