--- a/src/features/Container/Search/filterchips.scss
+++ b/src/features/Container/Search/filterchips.scss
@@ -15,6 +15,8 @@
         font-size: 14px;
         font-weight: 500;
         margin-bottom: 7px;
+        color: #0557d5;
+        text-transform: capitalize;
       }
       .chip-inside {
         margin-bottom: 5px;
