Button and Req Payload changes for Compare

--- a/src/features/Container/Protocols/Documents.scss
+++ b/src/features/Container/Protocols/Documents.scss
@@ -1,5 +1,9 @@
 .document-tab {
   width: 100%;
+  .compare-buttons {
+    display: flex;
+    margin-left: auto;
+  }
 
   .source-document-tab {
     width: 100%;
