--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -3,7 +3,7 @@
     font-size: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
-    display: block;
+    // display: block;
   }
   .view-wrapper {
     html {
