Legacy handled and 3050 issue

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -1,3 +1,9 @@
 .dashboard-parent {
   margin-top: 60px;
 }
+.title-link-protocol {
+  color: #0e0aff;
+}
+.title-no-link-protocol {
+  color: #333;
+}
