--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -428,11 +428,14 @@
     // width: auto;
     font-size: 13px;
   }
-
+  label.blueText {
+    color: #0557d5 !important;
+    font-weight: 600;
+  }
   span.blueText {
     color: #0557d5 !important;
     font-size: 16px;
-    font-weight: 600;
+
     cursor: pointer;
     a {
       color: #0557d5 !important;
