userRole to UserRole in Search

--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -10,6 +10,13 @@
       cursor: pointer;
       text-decoration: none;
     }
+    span.title-link-protocol-1 {
+      color: #333 !important;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      text-decoration: none;
+    }
     span.title-no-link-protocol-1 {
       color: #333 !important;
       font-size: 16px;
