--- a/src/assets/styles/addprotocol.scss
+++ b/src/assets/styles/addprotocol.scss
@@ -6,6 +6,28 @@
     }
   }
 }
+.version-validation {
+  padding-inline-start: 20px;
+  li {
+    font-size: 13px;
+  }
+}
+.version-text-field {
+  .asteric {
+    color: #e20000;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  button {
+    // float: right;
+    height: 20px;
+    width: 20px;
+    margin-left: 5px;
+  }
+}
+.version-text-field span:nth-child(2) {
+  display: none;
+}
 
 #add-protocol-modal {
   [class^="MuiFormLabel-asterisk-"] {
