Critical Major fixes

--- a/src/features/Container/Search/search.scss
+++ b/src/features/Container/Search/search.scss
@@ -507,12 +507,12 @@
     display: block;
     font-weight: 400;
     text-decoration: none;
-    color: black !important;
+    color: black;
     position: relative;
     border: 1px solid white;
     padding: 10px;
     background: white;
-    color: white;
+    // color: white;
     font-size: 12px;
     font-weight: 500;
   }
