--- a/src/features/Container/Protocols/ProtocolView/style.scss
+++ b/src/features/Container/Protocols/ProtocolView/style.scss
@@ -490,3 +490,8 @@ label {
     word-break: normal;
   }
 }
+.edit-text-con {
+  font-size: 14px;
+  font-family: "Proxima Nova";
+  margin-top: 10px;
+}
