Table with delete and fake save

--- a/src/features/Container/Protocols/Components/AG-Table/table.scss
+++ b/src/features/Container/Protocols/Components/AG-Table/table.scss
@@ -1,4 +1,7 @@
 .table-container {
+  .ag-row-drag {
+    max-width: 20px;
+  }
   .column-checkbox {
     display: flex;
     justify-content: space-evenly;
