--- a/src/features/Container/Protocols/Components/AG-Table/table.scss
+++ b/src/features/Container/Protocols/Components/AG-Table/table.scss
@@ -1,6 +1,6 @@
 .table-container {
   .delete {
-    background-color: red !important;
+    background-color: #6e6e6e !important;
     color: #fff;
   }
   .ag-row-drag {
