--- a/src/features/Container/Protocols/Tabs/NewProtocolView/Components/fileUpload.scss
+++ b/src/features/Container/Protocols/Tabs/NewProtocolView/Components/fileUpload.scss
@@ -13,7 +13,7 @@
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
     .delete {
-      background-color: red;
+      background-color: #6e6e6e !important;
       color: #fff;
     }
   }
