Edit UI changed

--- a/src/features/Container/Protocols/Tabs/NewProtocolView/Components/renderSegment.scss
+++ b/src/features/Container/Protocols/Tabs/NewProtocolView/Components/renderSegment.scss
@@ -1,5 +1,8 @@
 .format-container {
   position: relative;
+  .line-content {
+    outline: none;
+  }
   .button-container {
     position: absolute;
     right: 0;
