--- a/src/features/Container/Protocols/Tabs/NewProtocolView/Components/accordionDetail.scss
+++ b/src/features/Container/Protocols/Tabs/NewProtocolView/Components/accordionDetail.scss
@@ -2,7 +2,14 @@
   width: 100%;
   margin-bottom: 20px;
   padding-left: 30px;
+
   .option-content-container {
+    .line-content {
+      outline: none;
+    }
+    .edit-header-co {
+      font-weight: bold;
+    }
     .show-option {
       position: absolute;
       display: flex;
