--- a/src/features/Container/Protocols/Protocol.scss
+++ b/src/features/Container/Protocols/Protocol.scss
@@ -326,10 +326,21 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
-  svg {
-    vertical-align: middle;
-    margin-right: 7px;
-    font-size: 14px;
+  .icon-container {
+    background-color: #fff;
+    padding: 5px;
+    height: 25px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 25px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    svg {
+      vertical-align: middle;
+      margin-right: 0px;
+      font-size: 14px;
+    }
   }
   span {
     font-size: 16px;
