--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,26 @@
   background-color: rgba(255, 255, 255, 0.24);
 }
 
+.guide-icon {
+  color: #ffffff;
+  height: 56px;
+  padding: 16px;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.5;
+  border-radius: 0;
+  justify-content: space-between;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.guide-icon:hover,
+.guide-icon-active {
+  background-color: rgba(255, 255, 255, 0.24);
+}
+
+
 @keyframes App-logo-float {
   0% {
     transform: translateY(0);
