--- a/src/features/Components/GuidedTour/src/components/GuidedTour.scss
+++ b/src/features/Components/GuidedTour/src/components/GuidedTour.scss
@@ -1,3 +1,26 @@
 .react-joyride__overlay {
     background-color: rgba(0, 0, 0, 0.7) !important ;
 }
+
+.guided-tour-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+}
+
+.close-button-container {
+    position: absolute ;
+    top: 90px;
+    right: 10px;
+    z-index: 4;
+}
+
+.close-button {
+    background-color: rgba(255, 255, 255, 0.20);
+    border-style: none;
+    height: 25px;
+    width: 35px;
+}
