--- a/src/features/Container/Protocols/Tabs/NewProtocolView/ContentView/style.scss
+++ b/src/features/Container/Protocols/Tabs/NewProtocolView/ContentView/style.scss
@@ -473,6 +473,8 @@ label {
   padding-bottom: 5px;
   .value-inside {
     word-break: normal;
+    font-size: 10px;
+    padding: 5px !important;
   }
 }
 .edit-text-con {
