--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -65,9 +65,13 @@
   }
   // table tbody tr:nth-child(1) { font-weight: bold; background-color: #f2f2f2; }
   // margin-top: 70px;
+  // padding-left: 20px;
+  // max-width: 1140px;
+  // margin: 70px auto 10px;
+  margin-top: 60px;
   padding-left: 20px;
-  max-width: 1140px;
-  margin: 70px auto 10px;
+  max-width: 1200px;
+
   h1,
   h2,
   h3,
@@ -295,6 +299,63 @@
     text-transform: capitalize;
   }
 }
+
 .sidebar-blade > div > :last-child {
   display: none;
+}
+
+.pdf-loaded react-pdf__Page__canvas pdf-page {
+  display: inline-block;
+  position: absolute;
+  z-index: 1;
+}
+.sticky-bottom {
+  top: 60vh;
+  position: absolute;
+  justify-content: space-between;
+  overflow: auto;
+  box-sizing: border-box;
+  height: 56px;
+  width: 320px;
+  border: 1px solid #e9e9e9;
+  border-radius: 0 0 4px 4px;
+  background-color: #f6f7fb;
+}
+.buttonStyles {
+  width: 24px;
+  height: 25px;
+  line-height: 45px;
+  text-align: center;
+  padding: 2px;
+  border-radius: 50%;
+  background-color: #595959;
+  color: #fff;
+  min-width: auto !important;
+  text-align: center;
+  padding-left: 10px;
+  left: 2px;
+  margin-right: 10px;
+  padding-left: 10px;
+  top: 9px;
+  justify-content: center;
+}
+// .sticky-bottom {
+//   top: 59vh;
+//   position: absolute;
+//   justify-content: center;
+//   overflow: auto;
+//   border: thin;
+//   background-color: #f6f7fb;
+// }
+.MuiInputBase-inputMarginDense-3199 {
+  height: 27px;
+}
+.InternalTablePaginationActions-root-346 {
+  background-color: #f6f7fb;
+}
+.MuiPaper-root-520 {
+  background-color: #f6f7fb;
+}
+.test {
+  width: '450' !important;
 }
