--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -279,11 +279,14 @@
     flex: 3 1;
     display: flex;
     flex-direction: column;
+    height: 50%;
+    width: 50%;
   }
   .view-wrapper {
     position: relative;
     width: 100%;
     display: flex;
+   
   }
   .view-wrapper .MuiCard-root {
     padding: 0;
