--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -1,4 +1,22 @@
+
 .protocols {
+  margin-top: 60px;
+  // max-width: 1200px;
+  .protocol-tabs{
+    width: 100%;
+  }
+  .p-rl-20{
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+  }
+  .protocol-source-column,
+  .protocol-digitize-column{
+    border: none;
+    .panel-heading{
+      padding: 15px 15px 15px 45px;
+    }
+  }
   .br-cr-protocol {
     color: #333;
   }
@@ -68,9 +86,6 @@
   // padding-left: 20px;
   // max-width: 1140px;
   // margin: 70px auto 10px;
-  margin-top: 60px;
-  padding-left: 20px;
-  max-width: 1200px;
 
   h1,
   h2,
