--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -301,3 +301,8 @@
 .sidebar-blade > div > :last-child {
   display: none;
 }
+.Source Header{
+  font-weight: 'bold';
+  background-color: #FFFAFA ;
+  line-height: 32px;
+}
