--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -1,20 +1,22 @@
+.protocol_data_container {
+  border-top: 1px solid #d9d9d9;
+  margin-top: 10px;
+}
 
 .protocols {
   margin-top: 60px;
   // max-width: 1200px;
-  .protocol-tabs{
-    width: 100%;
-  }
-  .p-rl-20{
+
+  .p-rl-20 {
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
   }
   .protocol-source-column,
-  .protocol-digitize-column{
+  .protocol-digitize-column {
     border: none;
-    .panel-heading{
-      padding: 15px 15px 15px 30px !important;
+    .panel-heading {
+      padding: 15px 15px 15px 20px !important;
       font-weight: 600;
     }
   }
@@ -300,14 +302,24 @@
     display: flex;
     flex-direction: column;
     height: 50%;
-    width: 50%;
+    // width: 50%;
   }
   .view-wrapper {
     position: relative;
     width: 100%;
     display: flex;
-   
   }
+  .view-wrapper > div > div:nth-child(2) {
+    width: 100% !important;
+    padding-right: 15px;
+  }
+
+  .view-wrapper .digitize-panel-content {
+    overflow-y: scroll;
+    height: 72vh;
+    width: 100%;
+  }
+
   .view-wrapper .MuiCard-root {
     padding: 0;
   }
@@ -329,16 +341,23 @@
   z-index: 1;
 }
 .sticky-bottom {
-  top: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 15px;
   position: absolute;
   justify-content: space-between;
   overflow: auto;
   box-sizing: border-box;
-  height: 56px;
+  height: 52px;
   width: 320px;
   border: 1px solid #e9e9e9;
-  border-radius: 0 0 4px 4px;
+  border-radius: 4px;
   background-color: #f6f7fb;
+}
+
+.sticky-bottom div:first-child {
+  max-width: 230px;
 }
 .buttonStyles {
   width: 24px;
@@ -355,17 +374,9 @@
   left: 2px;
   margin-right: 10px;
   padding-left: 10px;
-  top: 9px;
   justify-content: center;
 }
-// .sticky-bottom {
-//   top: 59vh;
-//   position: absolute;
-//   justify-content: center;
-//   overflow: auto;
-//   border: thin;
-//   background-color: #f6f7fb;
-// }
+
 .MuiInputBase-inputMarginDense-3199 {
   height: 27px;
 }
@@ -377,4 +388,11 @@
 }
 .test {
   width: '450' !important;
+}
+
+.digitized_data_item {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  padding: 2px 2px 2px 15px;
 }
