--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -312,6 +312,7 @@
   .view-wrapper > div > div:nth-child(2) {
     width: 100% !important;
     padding-right: 15px;
+    float: right;
   }
 
   .view-wrapper .digitize-panel-content {
@@ -392,7 +393,26 @@
 
 .digitized_data_item {
   list-style-type: none;
-  display: flex;
   flex-direction: row;
   padding: 2px 2px 2px 15px;
+  position: relative;
+}
+
+.digitized_data_item > svg {
+  position: absolute;
+}
+
+.digitized_data_item > div {
+  margin-bottom: -2px;
+  border: 0px;
+  border-radius: 0px;
+  background-color: rgb(248, 248, 249);
+  margin-left: 40px;
+}
+
+.digitized_data_item [class*='MuiAccordion-root'] {
+  border-left: none;
+  border-right: 0;
+  border-top: 0;
+  border-bottom: 1px solid #e9e9e9;
 }
