--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -83,6 +83,22 @@
       background-color: rgb(211 211 211 / 30%);
       font-size: 14px;
     }
+    .panel_group {
+      display: flex;
+      padding: 1px;
+      box-sizing: content-box;
+      width: 100%;
+    }
+
+    .pdf_container {
+      display: flex;
+      justify-content: center;
+      scroll-padding: 50px 0px 0px 50px;
+      padding: 6px 16px;
+      overflow-y: scroll;
+      height: 72vh;
+      width: 100%;
+    }
   }
   // table tbody tr:nth-child(1) { font-weight: bold; background-color: #f2f2f2; }
   // margin-top: 70px;
@@ -400,6 +416,10 @@
 
 .digitized_data_item > svg {
   position: absolute;
+  position: absolute;
+  height: 18px;
+  color: #3b3b3b;
+  padding: 15px 15px 15px 0;
 }
 
 .digitized_data_item > div {
@@ -415,4 +435,18 @@
   border-right: 0;
   border-top: 0;
   border-bottom: 1px solid #e9e9e9;
+}
+
+.digitized_data_item .accordion_summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+}
+
+.digitized_data_item .accordion_summary_icons {
+  display: flex;
+  flex-direction: row;
+  width: 60px;
+  justify-content: space-between;
 }
