--- a/src/features/Container/Protocols/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft.scss
@@ -6,11 +6,15 @@
   [class*='Blade-body-'] {
     background: #f6f7fb;
     height: 100%;
-    padding: 5px 0 0 20px !important;
+    padding: 5px 0 0 0px !important;
   }
   [class*='Blade-left-'] {
     padding: 0;
   }
+
+  // [class*='MuiBackdrop-root'] {
+  //   top: 120px;
+  // }
 
   [class*='Blade-header-'] > h3 {
     text-align: center;
@@ -24,16 +28,20 @@
   [class*='blade-body-'] > div > div [class*='MuiAccordion-root-'] {
     height: 41px;
   }
+  .MuiAccordionSummary-expandIcon {
+    left: 10px;
+  }
 
   [class*='MuiAccordionSummary-root-'] {
     height: 24px;
     width: 100%;
     min-height: unset;
+    padding-left: 55px;
   }
-  div[class*='Blade-body-']{
+  div[class*='Blade-body-'] {
     overflow-x: hidden;
   }
-  
+
   [class*='MuiAccordionSummary-root-'] > div:first-child {
     height: 24px;
     min-height: unset;
@@ -47,12 +55,12 @@
   [class*='MuiAccordionSummary-root-'] > div:nth-child(2) {
     height: 14px;
     top: 10px;
+    left: 20px;
   }
 
   [class*='MuiAccordion-root'] {
     margin-top: 10px;
     background-color: #f6f7fb;
-    //  padding: 0 0 0 10px;
   }
   [class*='MuiAccordionDetails-root-'] {
     padding: 0 0 0px 10px;
@@ -61,6 +69,9 @@
     padding: 0 0 0 10px;
   }
 
+  [class*='MuiAccordionSummary-expandIcon'] {
+    padding-top: 0 !important;
+  }
   .Mui-expanded
     [class*='MuiAccordionDetails-root']
     [class*='MuiCollapse-container']
