Minor Fixes For CSS and Pagination

--- a/src/features/Container/Protocols/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft.scss
@@ -12,9 +12,9 @@
     padding: 0;
   }
 
-  // [class*='MuiBackdrop-root'] {
-  //   top: 120px;
-  // }
+  [class*='MuiBackdrop-root'] {
+    top: 134px;
+  }
 
   [class*='Blade-header-'] > h3 {
     text-align: center;
