code refactor on digitize initial commit

--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -340,7 +340,7 @@
   }
 
   .view-wrapper .digitize-panel-content {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 74vh;
     width: 100%;
   }
