--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -101,7 +101,7 @@
       display: flex;
       justify-content: center;
       overflow-y: scroll;
-      height: 78vh;
+      height: calc(100vh - 210px);
     }
   }
   // table tbody tr:nth-child(1) { font-weight: bold; background-color: #f2f2f2; }
@@ -342,7 +342,7 @@
 
   .view-wrapper .digitize-panel-content {
     overflow-y: auto;
-    height: 78vh;
+    height: calc(100vh - 210px);
     width: 100%;
   }
 
