--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -101,7 +101,7 @@
       display: flex;
       justify-content: center;
       overflow-y: scroll;
-      height: 78vh;
+      height: calc(100vh - 210px);
     }
   }
   // table tbody tr:nth-child(1) { font-weight: bold; background-color: #f2f2f2; }
@@ -342,7 +342,7 @@
 
   .view-wrapper .digitize-panel-content {
     overflow-y: auto;
-    height: 78vh;
+    height: calc(100vh - 210px);
     width: 100%;
   }
 
@@ -486,4 +486,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.accordion_summary_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+}
+
+.accordion_summary_actions {
+  display: flex;
+  flex-direction: row;
+}
+
+.accordion_details {
+  width: 80% !important;
+  height: auto;
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
+
+.accordion_details_loader {
+  height: 40px;
 }
