--- a/src/features/Container/Protocols/Digitized_edit.scss
+++ b/src/features/Container/Protocols/Digitized_edit.scss
@@ -1,10 +1,44 @@
-.edited-text[class*='MuiAccordion-root']{
-    width: '100%';
-    height: '100%';
-    textarea{
-        width: '100%';
-        height: '100%';
-        overflow-y:"Scroll";
-    };
-   
+.Richtextcontainer {
+  [class*='MuiInputBase-root'] {
+    width: 85px !important;
+    padding-left: '2px';
+  }
+
+  [class*='RichTextEditor-root'] {
+    height: 200px;
+    overflow: auto;
+    position: relative;
+  }
+
+  [class*='RichTextEditor-inlineControllersRoot-'] {
+    display: flex;
+    position: sticky;
+    top: 0;
+
+    [class*='MuiSelect-root'] {
+      font-size: x-small;
+    }
+    [class*='MuiFormControl-root'] {
+      width: 85px !important;
+    }
+    [class*='style-button-group'] {
+      font-size: x-small !important;
+      height: 29px !important;
+    }
+
+    .style-button-group .icon-button {
+      font-size: 12px;
+      padding: 9px 8px;
+    }
+
+    .style-button-group .icon-button.active {
+      border-left: unset;
+    }
+
+    .style-button-group div.icon-button {
+      height: 29px;
+      width: 25px;
+      box-sizing: border-box;
+    }
+  }
 }
