--- a/src/features/Container/Protocols/Digitized_edit.scss
+++ b/src/features/Container/Protocols/Digitized_edit.scss
@@ -14,6 +14,7 @@
     display: flex;
     position: sticky;
     top: 0;
+    background: #fff;
 
     [class*='MuiSelect-root'] {
       font-size: x-small;
