changes for blade

--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -40,13 +40,12 @@
   }
   div[class*='Blade-body-'] {
     overflow-x: hidden;
-    overflow-y: hidden;
   }
 
-  div[class*='Blade-body-'] > div > div > div {
-    position: relative !important;
-    height: unset !important;
-  }
+  // div[class*='Blade-body-'] > div > div > div {
+  //   position: relative !important;
+  //   height: unset !important;
+  // }
 
   [class*='MuiAccordionSummary-root-'] > div:first-child {
     height: 24px;
@@ -113,17 +112,10 @@
   width: 205px;
   background-color: #ffffff;
 }
-
 .autoSizer {
-  // width: ;
-  height: calc(50vh - 0px);
-  overflow-y: scroll;
-  background-color: chartreuse;
+  height: 100%;
 }
-
 .list-position {
-  // position: unset !important;
-  // height: unset !important;
   display: flex;
   min-height: 50px;
 }
