--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -333,6 +333,7 @@
     position: relative;
     width: 100%;
     display: flex;
+    padding-left: 10px;
   }
   .view-wrapper > div > div:nth-child(2) {
     width: 100% !important;
