--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -363,7 +363,7 @@
   display: none;
 }
 
-.sticky-bottom {
+.pdf-pagination {
   display: flex;
   align-items: center;
   bottom: 15px;
@@ -376,42 +376,32 @@
   border: 1px solid #e9e9e9;
   border-radius: 4px;
   background-color: #f6f7fb;
-}
-
-.sticky-bottom div:first-child {
-  max-width: 230px;
-}
-.buttonStyles {
-  width: 24px;
-  height: 25px;
-  line-height: 45px;
-  text-align: center;
-  padding: 2px;
-  border-radius: 50%;
-  background-color: #595959;
-  color: #fff;
-  min-width: auto !important;
-  left: 2px;
-  margin-right: 10px;
-  justify-content: center;
-
-  svg {
-    height: 16px;
-    width: 16px;
+  div:first-child {
+    max-width: 230px;
+  }
+  .buttonStyles {
+    width: 24px;
+    height: 25px;
+    line-height: 45px;
+    text-align: center;
+    padding: 2px;
+    border-radius: 50%;
+    background-color: #595959;
+    color: #fff;
+    min-width: auto !important;
+    left: 2px;
+    margin-right: 10px;
+    justify-content: center;
+  
+    svg {
+      height: 16px;
+      width: 16px;
+    }
   }
 }
 
-.MuiInputBase-inputMarginDense-3199 {
-  height: 27px;
-}
-.InternalTablePaginationActions-root-346 {
-  background-color: #f6f7fb;
-}
-.MuiPaper-root-520 {
-  background-color: #f6f7fb;
-}
-.test {
-  width: '450' !important;
+.pdf-pagination div:first-child {
+  max-width: 230px;
 }
 
 .digitized_data_item {
