refactoring sprint1 MR

--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -4,3 +4,11 @@
         flex: 1 1 auto;
     }
 }
+.accordion_summary_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 48px;
+    .section-title{
+    }
+}
