--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -1,12 +1,51 @@
-thead {
+.thead {
   display: contents !important;
 }
-
 .digitize-panel-content {
-  overflow-y: auto;
+  overflow-y: hidden !important;
   height: calc(100vh - 210px);
   width: 100%;
 }
+
+.metadata_item [class*='MuiAccordionSummary-root'] {
+  background: #e9e9e9;
+}
+.metadata_item {
+  padding: 2px 0px 2px 10px;
+}
+.metadata-flex {
+  display: flex;
+  flex-direction: row;
+}
+.metadata-checkbox {
+  float: right;
+}
+.metadata_item [class*='Accordion-expanded'] {
+  background: transparent !important;
+}
+.protocol-column {
+  flex: 3 1;
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+}
+
+.metadata-card {
+  max-height: 450px !important;
+  overflow-y: auto;
+}
+
+[class*='Table-scrollRoot-'] {
+  overflow-y: unset !important;
+}
+
 [class*='Table-tableWrapper-'] {
-  padding: 0 30px 0 20px !important;
+  overflow-x: unset !important;
+}
+
+[class*='MuiTableCell-root-']:first-child {
+  background-color: #f4f4f4;
+}
+[class*='MuiTableCell-body-'] {
+  background-color: #f9f9f9;
 }
