--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -2,22 +2,23 @@ thead {
   display: contents !important;
 }
 .digitize-panel-content {
-  overflow-y: hidden !important;
   height: calc(100vh - 210px);
   width: 100%;
+  overflow-y: scroll;
 }
 
 .metadata_item [class*='MuiAccordionSummary-root'] {
   background: #e9e9e9;
 }
 .metadata_item {
-  padding: 2px 0px 2px 10px;
+  padding: 2px 30px 2px 10px;
 }
 .metadat-flex-plus {
   float: left;
 }
 .metadata-plus-icon {
   float: right;
+  padding-right: 7%;
 }
 .metadata-flex {
   display: flex;
@@ -25,6 +26,7 @@ thead {
 }
 .metadata-checkbox {
   float: right;
+  padding-bottom: 5px;
 }
 .metadata_item [class*='Accordion-expanded'] {
   background: transparent !important;
@@ -35,7 +37,12 @@ thead {
   flex-direction: column;
   height: 50%;
 }
-
+th {
+  font-weight: bold !important;
+  border: 2px solid white;
+  background-color: #f9f9f9;
+  color: black;
+}
 td {
   border: 2px solid white;
 }
@@ -47,8 +54,16 @@ tr {
   overflow-y: auto;
 }
 
+[class*='makeStyles-scrollable-'] > tr > th {
+  background-color: #f9f9f9;
+}
 [class*='Table-scrollRoot-'] {
   overflow-y: unset !important;
+}
+
+[class*='MuiPaper-elevation1-'] {
+  border: none;
+  border-top: 1px solid #e9e9e9;
 }
 
 [class*='Table-tableWrapper-'] {
@@ -57,7 +72,17 @@ tr {
 
 [class*='MuiTableCell-root-']:first-child {
   background-color: #f4f4f4;
+  padding: 5px;
 }
 [class*='MuiTableCell-body-'] {
   background-color: #f9f9f9;
+  color: black;
+}
+[class*='MuiTableCell-head-'] {
+  color: black;
+}
+
+.digitize-panel-content::-webkit-scrollbar {
+  background: transparent;
+  width: 0px;
 }
