--- a/src/features/Container/Protocols/CustomComponents/renderContent.scss
+++ b/src/features/Container/Protocols/CustomComponents/renderContent.scss
@@ -31,4 +31,9 @@
   .contentEditable {
     outline: none;
   }
+
+  .contentEditable.content_header {
+    font-weight: bold;
+    padding: 10px 0;
+  }
 }
