--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -3,7 +3,7 @@
         height: 200px;
         flex: 1 1 auto;
         .enriched-txt{
-            color: #000;
+            color: #FF9300;
             cursor: pointer;
         }
     }
