--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -95,6 +95,9 @@
       padding: 1px;
       box-sizing: content-box;
       width: 100%;
+      > [class*='Panel-container-'] {
+        max-width: 100% !important;
+      }
     }
 
     .pdf_container {
@@ -525,6 +528,11 @@
 }
 
 .Richtextcontainer {
-  height: 300px;
+  height: 500px;
   padding-left: 30px;
+}
+
+.content_header {
+  font-weight: bold;
+  margin-bottom: 15px;
 }
