--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -347,7 +347,7 @@
   .view-wrapper .digitize-panel-content {
     overflow-y: auto;
     height: calc(100vh - 210px);
-    width: 100%;
+    width: calc(100% - 10px);
   }
 
   .view-wrapper .MuiCard-root {
