--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -9,24 +9,25 @@ thead {
 
 .metadata_item [class*='MuiAccordionSummary-root'] {
   background: #e9e9e9;
+  //padding-left: 26px;
 }
 .metadata_item {
-  padding: 2px 30px 2px 10px;
+  padding: 2px 8px 2px 5px;
 }
 .metadat-flex-plus {
   float: left;
 }
 .metadata-plus-icon {
   float: right;
-  padding-right: 7%;
+  padding-right: 4.5%;
+  font-size: 19px;
 }
-.metadata-flex {
-  display: flex;
-  flex-direction: row;
+.metadata-plus-size {
+  font-size: 19px !important;
 }
 .metadata-checkbox {
+  // padding-left: 53%;
   float: right;
-  padding-bottom: 5px;
 }
 .metadata_item [class*='Accordion-expanded'] {
   background: transparent !important;
@@ -57,17 +58,18 @@ tr {
 [class*='makeStyles-scrollable-'] > tr > th {
   background-color: #f9f9f9;
 }
-[class*='Table-scrollRoot-'] {
-  overflow-y: unset !important;
-}
+// [class*='Table-scrollRoot-'] {
+//   overflow-y: unset !important;
+// }
 
 [class*='MuiPaper-elevation1-'] {
   border: none;
-  border-top: 1px solid #e9e9e9;
+  padding-bottom: 12px;
+  // border-top: 1px solid #e9e9e9;
 }
 
-[class*='Table-tableWrapper-'] {
-  overflow-x: unset !important;
+.checkbox-pad {
+  padding-bottom: 9px;
 }
 
 [class*='MuiTableCell-root-']:first-child {
@@ -101,4 +103,30 @@ tr {
 
 [class*='MuiTableRow-root-'] {
   height: auto !important;
+}
+
+.metaData-boarder {
+  border: 1px solid rgba(0, 0, 0, 0.08);
+}
+.view-wrapper .MuiCard-root {
+  padding-right: 25px !important;
+  height: 100% !important;
+}
+[class*='Table-scrollRoot-'] {
+  width: 100% !important;
+}
+[class*='Accordion-icon-'] {
+  width: 1.3em;
+  height: 1.2em;
+  font-size: 20px;
+}
+[class*='MuiAccordionSummary-expandIcon'] {
+  left: 5px;
+}
+.accordion_summary_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+  padding-left: 10px;
 }
