--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -1,4 +1,7 @@
 .metadata-card {
+  max-height: 450px !important;
+  overflow-y: auto;
+  padding-right: 20px !important;
   thead {
     display: contents !important;
   }
@@ -51,22 +54,14 @@
   tr {
     border: 2px solid white;
   }
-  .metadata-card {
-    max-height: 450px !important;
-    overflow-y: auto;
-  }
 
   [class*='makeStyles-scrollable-'] > tr > th {
     background-color: #f9f9f9;
   }
-  // [class*='Table-scrollRoot-'] {
-  //   overflow-y: unset !important;
-  // }
 
   [class*='MuiPaper-elevation1-'] {
     border: none;
     padding-bottom: 12px;
-    // border-top: 1px solid #e9e9e9;
   }
 
   .checkbox-pad {
