--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -2,7 +2,9 @@
   .readable-content {
     height: 500px;
     flex: 1 1 auto;
-
+    .supContent {
+      display: flex;
+    }
     p {
       margin: 5px 0 0 0;
     }
