--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -361,7 +361,7 @@
 
   .view-wrapper .MuiCard-root {
     padding: 0;
-    height: 100% !important;
+  //  height: 100% !important;
   }
   label {
     font-weight: bold;
