--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -17,6 +17,7 @@
   justify-content: space-between;
   align-items: center;
   height: 48px;
-  .section-title {
+  p {
+    line-height: 1.2;
   }
 }
